--- a/views/record.ejs
+++ b/views/record.ejs
@@ -1,43 +1,42 @@
 <% include ./partials/header %>
 
-<html>
+    <html>
+
     <head>
         <style>
-            .col-3
-            {
+            .col-3 {
                 height: 30pt;
                 font-size: 20px;
             }
-            
-			body {
-				margin: 0;
-			}
 
-			.topnav {
-				overflow: hidden;
-				background-color: #333;
-			}
+            body {
+                margin: 0;
+            }
 
-			.topnav a {
-				float: left;
-				color: #f2f2f2;
-				text-align: center;
-				padding: 14px 16px;
-				text-decoration: none;
-				font-size: 17px;
+            .topnav {
+                overflow: hidden;
+                background-color: #333;
+            }
 
-			}
+            .topnav a {
+                float: left;
+                color: #f2f2f2;
+                text-align: center;
+                padding: 14px 16px;
+                text-decoration: none;
+                font-size: 17px;
 
-			.topnav a:hover {
-				background-color: #ddd;
-				color: black;
-			}
+            }
 
-			.topnav a.active {
-				background-color: #4CAF50;
-				color: white;
-			}
-		
+            .topnav a:hover {
+                background-color: #ddd;
+                color: black;
+            }
+
+            .topnav a.active {
+                background-color: #4CAF50;
+                color: white;
+            }
         </style>
     </head>
 
@@ -53,6 +52,48 @@
     <br>
     <br>
     <p> Under Construction</p>
+    <div class="col-md-4">
+        <%  if(children != null) { %>
+            <h2 id="headtag">List of children </h2>
+            <table border='1' style="empty-cells:hide" ;width='650' id="recordtable1">
+                <thead>
+                    <tr>
+                        <th class="hidden">ChildID</th>
+                        <th>ChildName</th>
+                        <th>Gender</th>
+                        <th>Phonenumber</th>
+                        <th>ChildEmail</th>
+
+                    </tr>
+                </thead>
+
+                <% children.forEach(function(record) { %>
+                    <tr>
+                        <td class="hidden">
+                            <%=record.objectId%>
+                        </td>
+                        <td>
+                            <%=record.childFirstName+record.childLastName%>
+                        </td>
+                        <td>
+                            <%=record.childGender%>
+                        </td>
+                        <td>
+                            <%=record.childPhone%>
+                        </td>
+                        <td>
+                            <%=record.childEmail%>
+                        </td>
+
+                    </tr>
+                    <% }); %>
+            </table>
+            <% } %>
+    </div>
+
+    <div id="latLongTable" class="col-md-8" border='1';width='650' >
+
+    </div>
     <br>
     <br>
     <br>
