--- a/views/user.ejs
+++ b/views/user.ejs
@@ -87,68 +87,59 @@
         </div>
 
 
+        <div class="row">
+            <div class="col-md-4">
+                <%  if(children != null) { %>
+                    <h2 id="headtag">List of children </h2>
+                    <table border='1' style="empty-cells:hide" ;width='650' id="resulttable">
+                        <thead>
+                            <tr>
+                                <th class="hidden">ChildID</th>
+                                <th>ChildName</th>
+                                <th>Gender</th>
+                                <th>Phonenumber</th>
+                                <th>ChildEmail</th>
 
-        <%  if(children != null) { %>
-            <h2 id="headtag">List of children </h2>
-            <table border='1' style="empty-cells:hide" ;width='650' id="resulttable">
-                <thead>
-                    <tr>
-                        <th class="hidden">ChildID</th>
-                        <th>ChildName</th>
-                        <th>Gender</th>
-                        <th>Phonenumber</th>
-                        <th>ChildEmail</th>
-
-                    </tr>
-                </thead>
+                            </tr>
+                        </thead>
 
 
-                <% children.forEach(function(record) { %>
-                    <tr>
-                        <td class="hidden">
-                            <%=record.objectId%>
-                        </td>
-                        <td>
-                            <%=record.childFirstName+record.childLastName%>
-                        </td>
-                        <td>
-                            <%=record.childGender%>
-                        </td>
-                        <td>
-                            <%=record.childPhone%>
-                        </td>
-                        <td>
-                            <%=record.childEmail%>
-                        </td>
+                        <% children.forEach(function(record) { %>
+                            <tr>
+                                <td class="hidden">
+                                    <%=record.objectId%>
+                                </td>
+                                <td>
+                                    <%=record.childFirstName+record.childLastName%>
+                                </td>
+                                <td>
+                                    <%=record.childGender%>
+                                </td>
+                                <td>
+                                    <%=record.childPhone%>
+                                </td>
+                                <td>
+                                    <%=record.childEmail%>
+                                </td>
 
-                    </tr>
-                    <% }); %>
-            </table>
-            <% } %>
+                            </tr>
+                            <% }); %>
+                    </table>
+                    <% } %>
+            </div>
+            <div class="col-md-8">
                 <br>
                 <h2>Current Location</h2>
-                </div>
-                <div class="col-md-3"></div>
-                <div class="col-md-6" id="map"></div>
-                <div class="col-md-3"></div>
+            </div>
+            <div class="col-md-1"></div>
+            <div class="col-md-10" id="map" style="width:500px;height:400px;"></div>
+            <div class="col-md-1"></div>
 
-                <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB3RaBAQdDLeYcpum-bTxVMvCuGvenG_SQ&callback=initMap" async
-                    defer></script>
-
-                <% include ./partials/footer %>
+            <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB3RaBAQdDLeYcpum-bTxVMvCuGvenG_SQ&callback=initMap" async
+                defer></script>
+        </div>
+        </div>
+        <% include ./partials/footer %>
     </body>
-    <script>
-        $("#resulttable tr").click(function () {
-            alert("hi");
-            var childObjectID_ToPost = $(this).children("td").html();
-            var data = {};
-            data.childObjectID = $(this).children("td").html().trim();
-            $.post('http://localhost:4002/welcome', data,
-                function (data, status) {
-                    var parseData = $.parseJSON(data);
-                    console.log('success' + parseData);
-                });
-        });
-    </script>
 
     </html>
