--- a/views/settings.ejs
+++ b/views/settings.ejs
@@ -45,14 +45,30 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-md-3">
-                    <a href="/welcome">Go Back</a>
+                    <a herf="/">Time Resolution Settings</a>
                 </div>
+                <div class="col-md-3">
+                    <a href="/welcome">Go Back</a>
+                </div> 
             </div>
         </div>
     </div>
-    <p> Under Construction</p>
-    <div>
+     <div class="col-sm-10">
+        <div class="tab-content">
+                <div id="setalertmode" class="tab-pane fade in active">
+                        <h2>Set Mode</h2>
+                        <form class="form-horizontal" method="post" action="/setalertmode">
+                              <div class="radio">
+                                    <input type="radio" name="setoption" value = "sms" checked>Set Time<br>
+                                    <input type="radio" name="setoption" value = "email">Set Distance<br>
+                                    <input type="text"  id= resoultion name="time" >
+                                    <input type="submit" value ="sumbit"> 
+                             </div>
+                        </form>
+                </div>
+
         
+        </div>
     </div>
     <br>
     <br>
