--- a/views/settings.ejs
+++ b/views/settings.ejs
@@ -1,43 +1,42 @@
 <% include ./partials/header %>
 
-<html>
+    <html>
+
     <head>
         <style>
-            .col-3
-            {
+            .col-3 {
                 height: 30pt;
                 font-size: 20px;
             }
-            
-			body {
-				margin: 0;
-			}
 
-			.topnav {
-				overflow: hidden;
-				background-color: #333;
-			}
+            body {
+                margin: 0;
+            }
 
-			.topnav a {
-				float: left;
-				color: #f2f2f2;
-				text-align: center;
-				padding: 14px 16px;
-				text-decoration: none;
-				font-size: 17px;
+            .topnav {
+                overflow: hidden;
+                background-color: #333;
+            }
 
-			}
+            .topnav a {
+                float: left;
+                color: #f2f2f2;
+                text-align: center;
+                padding: 14px 16px;
+                text-decoration: none;
+                font-size: 17px;
 
-			.topnav a:hover {
-				background-color: #ddd;
-				color: black;
-			}
+            }
 
-			.topnav a.active {
-				background-color: #4CAF50;
-				color: white;
-			}
-		
+            .topnav a:hover {
+                background-color: #ddd;
+                color: black;
+            }
+
+            .topnav a.active {
+                background-color: #4CAF50;
+                color: white;
+            }
         </style>
     </head>
 
@@ -49,25 +48,37 @@
                 </div>
                 <div class="col-md-3">
                     <a href="/welcome">Go Back</a>
-                </div> 
+                </div>
             </div>
         </div>
     </div>
-     <div class="col-sm-10">
+    <div class="col-sm-10">
         <div class="tab-content">
-                <div id="setalertmode" class="tab-pane fade in active">
-                        <h2>Set Mode</h2>
-                        <form class="form-horizontal" method="post" action="/setalertmode">
-                              <div class="radio">
-                                    <input type="radio" name="setoption" value = "sms" checked>Set Time<br>
-                                    <input type="radio" name="setoption" value = "email">Set Distance<br>
-                                    <input type="text"  id= resoultion name="time" >
-                                    <input type="submit" value ="sumbit"> 
-                             </div>
-                        </form>
-                </div>
+            <div id="setalertmode" class="tab-pane fade in active">
+                <h2>Set Mode</h2>
+                <form class="form-horizontal" method="post" action="/mode">
+                    <div class="radio">
+                        <input type="radio" name="setoption" value="sms" checked>Time
+                        <br>
+                        <input type="radio" name="setoption" value="email">Distance
+                        <br>
+                    </div>
+                    <div class="form-group">
+                        <label class="col-md-4 control-label" for="password">Enter Input</label>
+                        <div class="col-md-4">
+                            <input id="mode" name="mode" type="text" placeholder="Please enter the input" class="form-control input-md" required="">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="col-md-4 control-label"></label>
+                        <div class="col-md-8">
+                            <button type="submit" class="btn btn-info">Submit</button>
+                        </div>
+                    </div>
+                </form>
+            </div>
 
-        
+
         </div>
     </div>
     <br>
