--- a/views/user_child.ejs
+++ b/views/user_child.ejs
@@ -146,7 +146,7 @@
                     <div class="form-group">
                         <label class="col-md-4 control-label"></label>
                         <div class="col-md-8">
-                            <button type="submit" class="btn btn-info">Remove</button>
+                            <button type="submit" class="btn btn-info">Submit</button>
                         </div>
                     </div>
                 </form>
